# Impulse

./: .gitignore  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml
Include/: Logger.hpp
Include/Impulse/: Assert.hpp  Logger.hpp  Platform.hpp
Include/Impulse/Runtime/: Runtime.hpp
Setup/: Bootstrap.ps1  Bootstrap.sh
Source/: Logger.cpp  Platform.cpp  Runtime.cpp
